<resources>
    <string name="app_name">Wassup</string>
    <string name="registro">Registro</string>
    <string name="usuario">Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="emailinvalido">Email o contraseña inválida</string>
    <string name="rellenarcampos">Rellena todos los campos</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="conectarse">conectarse</string>
    <string name="rellenar">Rellena ambos campos</string>
    <string name="credencialesincorrectas">Credenciales incorrectas</string>
    <string name="registrate">¡Regístrate ahora!</string>
    <string name="cerrarsesion">Cerrar sesión</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="escribeunmensaje">Escribe un mensaje...</string>
    <string name="subiendo">Subiendo...</string>
    <string name="falloimagen">Fallo al subir la imagen</string>
    <string name="subidaprogresp">Subida en progreso...</string>
    <string name="leido">Leído</string>
    <string name="enviado">Enviado</string>
    <string name="perfil">Perfil</string>
    <string name="usuarios">Usuarios</string>
</resources>